--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="item_sair">Sair</string>
     <string name="item_configuracoes">Configurações</string>
     <string name="salvar">Salvar</string>
+    <string name="title_activity_lista_pessoa_livre_acesso">ListaPessoaLivreAcessoActivity</string>
 </resources>
